# stl-algorithms

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  adjacent.cpp  gen-container.cpp  gen-second-container.cpp  gen-third-container.cpp  main.cpp  misc.cpp  modify-each-other.cpp  modify-self.cpp  my_algorithm.h  my_stl.h  non-modifying-sequence-operations.cpp  org.txt  permutations-self.cpp  properties-of-elements.cpp  reduce.cpp  search-one.cpp  search-range.cpp  sort.cpp  two-containers-relation.cpp
